Readme, renamed allowMoreEncoderDecoderNames to allowTaggedElementsWithoutNS, made octal chars require the new allowBase8Chars option.